labs/02-services-networking/ext-client.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    client: external
  name: ext-client
  namespace: external-lab
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: curlimages/curl
    name: ext-client
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
