labs/02-services-networking/db-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-headless
  name: db-headless
  namespace: net-lab
spec:
  clusterIP: None
  ports:
    - name: "6379"
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: db
  type: ClusterIP
status:
  loadBalancer: {}
