labs/02-services-networking/eo-app-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-backend
  name: app-nodeport-svc
  namespace: net-lab
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: web-backend
  type: NodePort
status:
  loadBalancer: {}
