labs/02-services-networking/oc-app-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-backend
  name: web-backend
  namespace: net-lab
spec:
  ports:
  - name: 8080-80
    nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: web-backend
  type: NodePort
status:
  loadBalancer: {}
