labs/02-services-networking/web-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-backend
  name: web-backend-svc
  namespace: net-lab
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-backend
status:
  loadBalancer: {}
