labs/02-services-networking/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
  namespace: ingress-lab
spec:
  rules:
  - host: red.example.com
    http:
      paths:
      - backend:
          service:
            name: red-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: blue.example.com
    http:
      paths:
      - backend:
          service:
            name: blue-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
