labs/02-services-networking/crawler-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crawler-egress
  namespace: secure-lab
spec:
  podSelector:
    matchLabels:
      app: crawler
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
